@@ -1,0 +1,9 @@
+[Desktop Entry]
+Version=0.9.4
+Type=Application
+Encoding=UTF-8
+Name=BZFlag
+TryExec=bzflag
+Exec=bzflag
+Categories=Game;ActionGame
+Icon=@DATADIR@bzflag-48x48.png
