@@ -4,6 +4,7 @@
 BZFlag 2.0.1  "Falcor's Despair" (2004-01-17)
 ---------------------------------------------
 
+* Added a .desktop file - David Trowbridge
 * Tool for converting obj to bzw - Jeff Myers
 * Addition of converted ProFont font - Andrew Keyser
 * Added a file syntax section to bzw.5 - Fred Cods
